@@ -867,6 +867,7 @@ PORT hc08_port =
   _hc08_setDefaultOptions,
   hc08_assignRegisters,
   _hc08_getRegName,
+  0,
   NULL,
   _hc08_keywords,
   _hc08_genAssemblerPreamble,
@@ -1011,6 +1012,7 @@ PORT s08_port =
   _hc08_setDefaultOptions,
   hc08_assignRegisters,
   _hc08_getRegName,
+  0,
   NULL,
   _hc08_keywords,
   _hc08_genAssemblerPreamble,
